--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "mysql2": "^3.11.4"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
+    "nodemailer": "^6.9.16"
   }
 }
