--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-session": "^1.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "paypal-rest-sdk": "^1.8.1"
   },
   "description": ""
 }
